# LLaDAFast

./: .gitignore  README.md  conftest.py  debug_out.txt  debug_teacher_attn.py  environment.yml  nohup.out  pyproject.toml  requirements.txt  test_distill_e2e.sh  test_teacher_attn.py
docs/: design_details.md
runs/hybrid_15k/: generations.txt  loss_curve.json  ppl_curve.json
runs/hybrid_15k/step_6000/: chat_template.jinja
scripts/eval/: perplexity.py
src/llada_fast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llada_fast/modeling/: bidirectional_gated_deltanet.py  config.json  configuration_llada2_moe.py  hybrid_attention.py  linear_attention.py  masks.py  modeling_llada2_moe.py  special_tokens_map.json  tokenizer_config.json
src/llada_fast/training/: distill.py  train_lora.py
src/llada_fast/training/distill/: __init__.py  attn_viz.py  config.py  curriculum.py  data.py  hooks.py  llm_judge.py  run.py
src/llada_fast/training/lora/: test_teacher_inference.py  train.py
tests/: test_attention.py  test_distill.py  test_linear_attn.py  test_lora.py  test_lora_train.py  test_numerical.py
