[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llada-fast"
version = "0.1.0"
description = "Fast Linear Attention for LLaDA"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "peft",
    "datasets",
    "safetensors",
    "tqdm",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
